Fix: Wrap comment text and make comment textarea automatically resize itself (#4626)
* wrap comment-content area to avoid long comments from overflowing
* wrap comment textarea to prevent it from scrolling horizontally
* autosize comment textarea to fit to the comment text
* fixed rendering of comment editor

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -225,7 +225,7 @@ textarea#id_comment {
   height: 4em;
 }
 div.CodeMirror.cm-s-weblate {
-  height: 5em;
+  height: auto;
   color: #555555;
   font-family: inherit;
 }
@@ -508,6 +508,7 @@ form + .login-label {
   border-radius: 0 5px 5px 5px;
   background-color: #e5f0f2;
   padding: 8px 10px;
+  word-wrap: break-word;
 }
 
 .comment-source {
